fix mapping in PatientController, add tests